syntax = "proto3";

import "google/protobuf/any.proto";

message BaseMessage {
    google.protobuf.Any message = 1;
}